feat: настройка графиков

--- a/flaskbot/templates/admin/analytics_index.html
+++ b/flaskbot/templates/admin/analytics_index.html
@@ -2,4 +2,10 @@
 
 {% block body %}
 <a href="/admin/dash/genre/"> График категорий</a>
+<br><br>
+<a href="/admin/dash/current-day/"> Посещений за день</a>
+<br><br>
+<a href="/admin/dash/favorites/"> Популярное</a>
+
+
 {% endblock %}
