feat: миниатюры пикч в админке, реализация залогирования для dash-страниц
Настроил пути для корректного отображения изображений при просмотре модели.

При выходе юзера, теперь dash - страницы тоже будут не доступны.

--- a/flaskbot/templates/admin/analytics_index.html
+++ b/flaskbot/templates/admin/analytics_index.html
@@ -3,7 +3,7 @@
 {% block body %}
 <a href="/admin/dash/genre/"> График категорий</a>
 <br><br>
-<a href="/admin/dash/current-day/"> Посещений за день</a>
+<a href="/dash/current-day/"> Посещений за день</a>
 <br><br>
 <a href="/admin/dash/favorites/"> Популярное</a>
 
